tests/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN
    RBRACE
    SEMICOLON
    FUNCTION
    EQUAL
    VAR
    ELSE
    IF
    LBRACE

Grammar

Rule 0     S' -> exp
Rule 1     exp -> IDENTIFIER
Rule 2     exp -> NUMBER
Rule 3     exp -> STRING
Rule 4     exp -> TRUE
Rule 5     exp -> FALSE
Rule 6     exp -> NOT exp
Rule 7     exp -> LPAREN exp RPAREN
Rule 8     args -> exp COMMA args
Rule 9     args -> exp
Rule 10    exp -> IDENTIFIER LPAREN optargs RPAREN
Rule 11    optargs -> args
Rule 12    optargs -> <empty>
Rule 13    exp -> exp PLUS exp
Rule 14    exp -> exp MINUS exp
Rule 15    exp -> exp TIMES exp
Rule 16    exp -> exp MOD exp
Rule 17    exp -> exp DIVIDE exp
Rule 18    exp -> exp EQUALEQUAL exp
Rule 19    exp -> exp LE exp
Rule 20    exp -> exp LT exp
Rule 21    exp -> exp GE exp
Rule 22    exp -> exp GT exp
Rule 23    exp -> exp ANDAND exp
Rule 24    exp -> exp OROR exp

Terminals, with rules where they appear

ANDAND               : 23
COMMA                : 8
DIVIDE               : 17
ELSE                 : 
EQUAL                : 
EQUALEQUAL           : 18
FALSE                : 5
FUNCTION             : 
GE                   : 21
GT                   : 22
IDENTIFIER           : 1 10
IF                   : 
LBRACE               : 
LE                   : 19
LPAREN               : 7 10
LT                   : 20
MINUS                : 14
MOD                  : 16
NOT                  : 6
NUMBER               : 2
OROR                 : 24
PLUS                 : 13
RBRACE               : 
RETURN               : 
RPAREN               : 7 10
SEMICOLON            : 
STRING               : 3
TIMES                : 15
TRUE                 : 4
VAR                  : 
error                : 

Nonterminals, with rules where they appear

args                 : 8 11
exp                  : 6 7 8 9 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 0
optargs              : 10

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 7

state 1

    (2) exp -> NUMBER .

    PLUS            reduce using rule 2 (exp -> NUMBER .)
    MINUS           reduce using rule 2 (exp -> NUMBER .)
    TIMES           reduce using rule 2 (exp -> NUMBER .)
    MOD             reduce using rule 2 (exp -> NUMBER .)
    DIVIDE          reduce using rule 2 (exp -> NUMBER .)
    EQUALEQUAL      reduce using rule 2 (exp -> NUMBER .)
    LE              reduce using rule 2 (exp -> NUMBER .)
    LT              reduce using rule 2 (exp -> NUMBER .)
    GE              reduce using rule 2 (exp -> NUMBER .)
    GT              reduce using rule 2 (exp -> NUMBER .)
    ANDAND          reduce using rule 2 (exp -> NUMBER .)
    OROR            reduce using rule 2 (exp -> NUMBER .)
    $end            reduce using rule 2 (exp -> NUMBER .)
    RPAREN          reduce using rule 2 (exp -> NUMBER .)
    COMMA           reduce using rule 2 (exp -> NUMBER .)


state 2

    (4) exp -> TRUE .

    PLUS            reduce using rule 4 (exp -> TRUE .)
    MINUS           reduce using rule 4 (exp -> TRUE .)
    TIMES           reduce using rule 4 (exp -> TRUE .)
    MOD             reduce using rule 4 (exp -> TRUE .)
    DIVIDE          reduce using rule 4 (exp -> TRUE .)
    EQUALEQUAL      reduce using rule 4 (exp -> TRUE .)
    LE              reduce using rule 4 (exp -> TRUE .)
    LT              reduce using rule 4 (exp -> TRUE .)
    GE              reduce using rule 4 (exp -> TRUE .)
    GT              reduce using rule 4 (exp -> TRUE .)
    ANDAND          reduce using rule 4 (exp -> TRUE .)
    OROR            reduce using rule 4 (exp -> TRUE .)
    $end            reduce using rule 4 (exp -> TRUE .)
    RPAREN          reduce using rule 4 (exp -> TRUE .)
    COMMA           reduce using rule 4 (exp -> TRUE .)


state 3

    (3) exp -> STRING .

    PLUS            reduce using rule 3 (exp -> STRING .)
    MINUS           reduce using rule 3 (exp -> STRING .)
    TIMES           reduce using rule 3 (exp -> STRING .)
    MOD             reduce using rule 3 (exp -> STRING .)
    DIVIDE          reduce using rule 3 (exp -> STRING .)
    EQUALEQUAL      reduce using rule 3 (exp -> STRING .)
    LE              reduce using rule 3 (exp -> STRING .)
    LT              reduce using rule 3 (exp -> STRING .)
    GE              reduce using rule 3 (exp -> STRING .)
    GT              reduce using rule 3 (exp -> STRING .)
    ANDAND          reduce using rule 3 (exp -> STRING .)
    OROR            reduce using rule 3 (exp -> STRING .)
    $end            reduce using rule 3 (exp -> STRING .)
    RPAREN          reduce using rule 3 (exp -> STRING .)
    COMMA           reduce using rule 3 (exp -> STRING .)


state 4

    (1) exp -> IDENTIFIER .
    (10) exp -> IDENTIFIER . LPAREN optargs RPAREN

    PLUS            reduce using rule 1 (exp -> IDENTIFIER .)
    MINUS           reduce using rule 1 (exp -> IDENTIFIER .)
    TIMES           reduce using rule 1 (exp -> IDENTIFIER .)
    MOD             reduce using rule 1 (exp -> IDENTIFIER .)
    DIVIDE          reduce using rule 1 (exp -> IDENTIFIER .)
    EQUALEQUAL      reduce using rule 1 (exp -> IDENTIFIER .)
    LE              reduce using rule 1 (exp -> IDENTIFIER .)
    LT              reduce using rule 1 (exp -> IDENTIFIER .)
    GE              reduce using rule 1 (exp -> IDENTIFIER .)
    GT              reduce using rule 1 (exp -> IDENTIFIER .)
    ANDAND          reduce using rule 1 (exp -> IDENTIFIER .)
    OROR            reduce using rule 1 (exp -> IDENTIFIER .)
    $end            reduce using rule 1 (exp -> IDENTIFIER .)
    RPAREN          reduce using rule 1 (exp -> IDENTIFIER .)
    COMMA           reduce using rule 1 (exp -> IDENTIFIER .)
    LPAREN          shift and go to state 9


state 5

    (7) exp -> LPAREN . exp RPAREN
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 10

state 6

    (5) exp -> FALSE .

    PLUS            reduce using rule 5 (exp -> FALSE .)
    MINUS           reduce using rule 5 (exp -> FALSE .)
    TIMES           reduce using rule 5 (exp -> FALSE .)
    MOD             reduce using rule 5 (exp -> FALSE .)
    DIVIDE          reduce using rule 5 (exp -> FALSE .)
    EQUALEQUAL      reduce using rule 5 (exp -> FALSE .)
    LE              reduce using rule 5 (exp -> FALSE .)
    LT              reduce using rule 5 (exp -> FALSE .)
    GE              reduce using rule 5 (exp -> FALSE .)
    GT              reduce using rule 5 (exp -> FALSE .)
    ANDAND          reduce using rule 5 (exp -> FALSE .)
    OROR            reduce using rule 5 (exp -> FALSE .)
    $end            reduce using rule 5 (exp -> FALSE .)
    RPAREN          reduce using rule 5 (exp -> FALSE .)
    COMMA           reduce using rule 5 (exp -> FALSE .)


state 7

    (0) S' -> exp .
    (13) exp -> exp . PLUS exp
    (14) exp -> exp . MINUS exp
    (15) exp -> exp . TIMES exp
    (16) exp -> exp . MOD exp
    (17) exp -> exp . DIVIDE exp
    (18) exp -> exp . EQUALEQUAL exp
    (19) exp -> exp . LE exp
    (20) exp -> exp . LT exp
    (21) exp -> exp . GE exp
    (22) exp -> exp . GT exp
    (23) exp -> exp . ANDAND exp
    (24) exp -> exp . OROR exp

    PLUS            shift and go to state 19
    MINUS           shift and go to state 21
    TIMES           shift and go to state 16
    MOD             shift and go to state 22
    DIVIDE          shift and go to state 14
    EQUALEQUAL      shift and go to state 20
    LE              shift and go to state 13
    LT              shift and go to state 17
    GE              shift and go to state 15
    GT              shift and go to state 18
    ANDAND          shift and go to state 11
    OROR            shift and go to state 12


state 8

    (6) exp -> NOT . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 23

state 9

    (10) exp -> IDENTIFIER LPAREN . optargs RPAREN
    (11) optargs -> . args
    (12) optargs -> .
    (8) args -> . exp COMMA args
    (9) args -> . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    RPAREN          reduce using rule 12 (optargs -> .)
    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    args                           shift and go to state 24
    exp                            shift and go to state 26
    optargs                        shift and go to state 25

state 10

    (7) exp -> LPAREN exp . RPAREN
    (13) exp -> exp . PLUS exp
    (14) exp -> exp . MINUS exp
    (15) exp -> exp . TIMES exp
    (16) exp -> exp . MOD exp
    (17) exp -> exp . DIVIDE exp
    (18) exp -> exp . EQUALEQUAL exp
    (19) exp -> exp . LE exp
    (20) exp -> exp . LT exp
    (21) exp -> exp . GE exp
    (22) exp -> exp . GT exp
    (23) exp -> exp . ANDAND exp
    (24) exp -> exp . OROR exp

    RPAREN          shift and go to state 27
    PLUS            shift and go to state 19
    MINUS           shift and go to state 21
    TIMES           shift and go to state 16
    MOD             shift and go to state 22
    DIVIDE          shift and go to state 14
    EQUALEQUAL      shift and go to state 20
    LE              shift and go to state 13
    LT              shift and go to state 17
    GE              shift and go to state 15
    GT              shift and go to state 18
    ANDAND          shift and go to state 11
    OROR            shift and go to state 12


state 11

    (23) exp -> exp ANDAND . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 28

state 12

    (24) exp -> exp OROR . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 29

state 13

    (19) exp -> exp LE . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 30

state 14

    (17) exp -> exp DIVIDE . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 31

state 15

    (21) exp -> exp GE . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 32

state 16

    (15) exp -> exp TIMES . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 33

state 17

    (20) exp -> exp LT . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 34

state 18

    (22) exp -> exp GT . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 35

state 19

    (13) exp -> exp PLUS . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 36

state 20

    (18) exp -> exp EQUALEQUAL . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 37

state 21

    (14) exp -> exp MINUS . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 38

state 22

    (16) exp -> exp MOD . exp
    (1) exp -> . IDENTIFIER
    (2) exp -> . NUMBER
    (3) exp -> . STRING
    (4) exp -> . TRUE
    (5) exp -> . FALSE
    (6) exp -> . NOT exp
    (7) exp -> . LPAREN exp RPAREN
    (10) exp -> . IDENTIFIER LPAREN optargs RPAREN
    (13) exp -> . exp PLUS exp
    (14) exp -> . exp MINUS exp
    (15) exp -> . exp TIMES exp
    (16) exp -> . exp MOD exp
    (17) exp -> . exp DIVIDE exp
    (18) exp -> . exp EQUALEQUAL exp
    (19) exp -> . exp LE exp
    (20) exp -> . exp LT exp
    (21) exp -> . exp GE exp
    (22) exp -> . exp GT exp
    (23) exp -> . exp ANDAND exp
    (24) exp -> . exp OROR exp

    IDENTIFIER      shift and go to state 4
    NUMBER          shift and go to state 1
    STRING          shift and go to state 3
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    NOT             shift and go to state 8
    LPAREN          shift and go to state 5

    exp                            shift and go to state 39

state 23

    (6) exp -> NOT exp .
    (13) exp -> exp . PLUS exp
    (14) exp -> exp . MINUS exp
    (15) exp -> exp . TIMES exp
    (16) exp -> exp . MOD exp
    (17) exp -> exp . DIVIDE exp
    (18) exp -> exp . EQUALEQUAL exp
    (19) exp -> exp . LE exp
    (20) exp -> exp . LT exp
    (21) exp -> exp . GE exp
    (22) exp -> exp . GT exp
    (23) exp -> exp . ANDAND exp
    (24) exp -> exp . OROR exp

    PLUS            reduce using rule 6 (exp -> NOT exp .)
    MINUS           reduce using rule 6 (exp -> NOT exp .)
    TIMES           reduce using rule 6 (exp -> NOT exp .)
    MOD             reduce using rule 6 (exp -> NOT exp .)
    DIVIDE          reduce using rule 6 (exp -> NOT exp .)
    EQUALEQUAL      reduce using rule 6 (exp -> NOT exp .)
    LE              reduce using rule 6 (exp -> NOT exp .)
    LT              reduce using rule 6 (exp -> NOT exp .)
    GE              reduce using rule 6 (exp -> NOT exp .)
    GT              reduce using rule 6 (exp -> NOT exp .)
    ANDAND          reduce using rule 6 (exp -> NOT exp .)
    OROR            reduce using rule 6 (exp -> NOT exp .)
    $end            reduce using rule 6 (exp -> NOT exp .)
    RPAREN          reduce using rule 6 (exp -> NOT exp .)
    COMMA           reduce using rule 6 (exp -> NOT exp .)

  ! PLUS            [ shift and go to state 19 ]
  ! MINUS           [ shift and go to state 21 ]
  ! TIMES           [ shift and go to state 16 ]
  ! MOD             [ shift and go to state 22 ]
  ! DIVIDE          [ shift and go to state 14 ]
  ! EQUALEQUAL      [ shift and go to state 20 ]
  ! LE              [ shift and go to state 13 ]
  ! LT              [ shift and go to state 17 ]
  ! GE              [ shift and go to state 15 ]
  ! GT              [ shift and go to state 18 ]
  ! ANDAND          [ shift and go to state 11 ]
  ! OROR            [ shift and go to state 12 ]


state 24

    (11) optargs -> args .

    RPAREN          reduce using rule 11 (optargs -> args .)


state 25

    (10) exp -> IDENTIFIER LPAREN optargs . RPAREN

    RPAREN          shift and go to state 40


state 26

    (8) args -> exp . COMMA args
    (9) args -> exp .
    (13) exp -> exp . PLUS exp
    (14) exp -> exp . MINUS exp
    (15) exp -> exp . TIMES exp
    (16) exp -> exp . MOD exp
    (17) exp -> exp . DIVIDE exp
    (18) exp -> exp . EQUALEQUAL exp
    (19) exp -> exp . LE exp
    (20) exp -> exp . LT exp
    (21) exp -> exp . GE exp
    (22) exp -> exp . GT exp
    (23) exp -> exp . ANDAND exp
    (24) exp -> exp . OROR exp

    COMMA           shift and go to state 41
    RPAREN          reduce using rule 9 (args -> exp .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 21
    TIMES           shift and go to state 16
    MOD             shift and go to state 22
    DIVIDE          shift and go to state 14
    EQUALEQUAL      shift and go to state 20
    LE              shift and go to state 13
    LT              shift and go to state 17
    GE              shift and go to state 15
    GT              shift and go to state 18
    ANDAND          shift and go to state 11
    OROR            shift and go to state 12


state 27

    (7) exp -> LPAREN exp RPAREN .

    PLUS            reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    MINUS           reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    TIMES           reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    MOD             reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    DIVIDE          reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    EQUALEQUAL      reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    LE              reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    LT              reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    GE              reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    GT              reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    ANDAND          reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    OROR            reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    $end            reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    RPAREN          reduce using rule 7 (exp -> LPAREN exp RPAREN .)
    COMMA           reduce using rule 7 (exp -> LPAREN exp RPAREN .)


state 28

    (23) exp -> exp ANDAND exp .
    (13) exp -> exp . PLUS exp
    (14) exp -> exp . MINUS exp
    (15) exp -> exp . TIMES exp
    (16) exp -> exp . MOD exp
    (17) exp -> exp . DIVIDE exp
    (18) exp -> exp . EQUALEQUAL exp
    (19) exp -> exp . LE exp
    (20) exp -> exp . LT exp
    (21) exp -> exp . GE exp
    (22) exp -> exp . GT exp
    (23) exp -> exp . ANDAND exp
    (24) exp -> exp . OROR exp
